article word wrap css fixed

--- a/css/theme.css
+++ b/css/theme.css
@@ -49,3 +49,7 @@ body {
 .author a {
     color: #ee4444;
 }
+
+.article {
+    word-wrap: break-word;
+}
